--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>I am <br>Ade Omotosho</h1>
       <p>A <span class="typed" data-typed-items="Web Developer, Freelancer, Designer, Researcher, Creative Thinker"></span></p>
-      <a href="assets/habyaad cv.docx" download><button class='btn btn-primary'>Download Resume</button></a>
+      <a href="assets/ade_resume.pdf" download><button class='btn btn-primary'>Download Resume</button></a>
     </div>
   </section><!-- End Hero -->
 
